--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 # idiosyncratic files
 *.flick
 CLAUDE.md
-/ai-docs
+ai-docs/
 
 # dotenv environment variable files
 .env
